Renaming 16scoreyumi to creditscoresok.co

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "16scoreyumi",
+  "name": "creditscoresok.co",
   "theme": "syntax",
   "version": "0.1.0",
   "description": "creditscoresok.co ◄ Get Your FREE Credit Score creditscoresok.co, Check Your Credit For Free. Get My Credit Score For Free. Start Here Today",
